add customer sign in

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,9 @@
     <a href="/Sign_up">
         <div class="botton">Sign-Up</div>
     </a>
-    <div class="botton"></div>
+    <a href="/Log-In">
+        <div class="botton">Log-In</div>
+    </a>
     <div class="botton"></div>
 </div>
 
