add customer login

--- a/src/main/resources/templates/logInForm.html
+++ b/src/main/resources/templates/logInForm.html
@@ -46,6 +46,7 @@
         <div><input class="box" name="passWord" placeholder="PassWord" th:field="*{passWord}" type="password"></div>
         <div><input class="box" type="submit" value="LogIn"></div>
     </form>
+    <div style="color: red" th:text="${massage}"></div>
 </div>
 </body>
 </html>
