--- a/src/main/resources/templates/User-Page.html
+++ b/src/main/resources/templates/User-Page.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div id="main">
-    <div id="options"></div>
+    <div id="options" th:text="${customer.userName}"></div>
     <div id="console">
         <table>
             <thead>
