--- a/src/main/resources/templates/show-tickets.html
+++ b/src/main/resources/templates/show-tickets.html
@@ -4,24 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+
+
+        }
+
+        #main {
+            align-self: center;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            height: auto;
+            background-color: cornsilk;
+        }
+
+        td {
+            direction: rtl;
+            width: 150px;
+            height: 60px;
+            border: solid black;
+            border-collapse: collapse;
+        }
+
+        tr {
+            border: solid black;
+            border-collapse: collapse;
+        }
+
+        table {
+            border: solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
-<div>
-    <h2>Users</h2>
+<div id="main">
     <table>
-        <thead>
         <tr>
-            <th>TripID</th>
-            <th>ID</th>
+            <td colspan="2" th:text="${origin} + -- + ${destination}"></td>
+            <td th:text="${date}"></td>
         </tr>
-        </thead>
-        <tbody>
         <tr th:each="ticket : ${tickets}">
-            <td th:text="${ticket.originLocation.name}"></td>
-            <td th:text="${ticket.destinationLocation.name}"></td>
+            <td th:text="${ticket.tripId}"></td>
             <td th:text="${ticket.time}"></td>
+            <td>
+                <form method="get" th:action="@{/passenger-form}">
+                    <input name="ticketId" th:value="${ticket.id}" type="hidden"/>
+                    <input type="submit" value="انتخاب"/>
+                </form>
+            </td>
         </tr>
-        </tbody>
     </table>
 </div>
 </body>
