--- a/src/main/resources/templates/passenger-form.html
+++ b/src/main/resources/templates/passenger-form.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+
+
+        }
+
+        #main {
+            align-self: center;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            height: auto;
+            background-color: cornsilk;
+        }
+
+        td {
+            direction: rtl;
+            width: 150px;
+            height: 60px;
+            border: solid black;
+            border-collapse: collapse;
+        }
+
+        tr {
+            border: solid black;
+            border-collapse: collapse;
+        }
+
+        table {
+            border: solid black;
+            border-collapse: collapse;
+        }
+
+        input {
+            height: 35px;
+        }
+    </style>
 </head>
 <body>
+<div id="main">
+    <form method="get" th:action="@{/add-customer-ticket}">
+        <input name="ticketID" th:value="${ticketID}" type="hidden">
+        <table>
+            <tr>
+                <td><input id="name" name="name" type="text"></td>
+                <td><label for="name">نام و نام خانوادگی</label></td>
+            </tr>
+            <tr>
+                <td>
+                    <div style="float:right"><input checked="checked" name="gender" type="radio" value="مرد"/>مرد</div>
+                    <div style="float: right"><input name="gender" type="radio" value="زن"/>زن</div>
+                </td>
+                <td><label for="gender">جنسیت</label></td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <div style="width: 100%; height: 100%; display: flex; justify-content: center"><input
+                            style="width: 60%"
+                            type="submit"
+                            value="ثبت">
+                    </div>
+                </td>
+            </tr>
+
+        </table>
+    </form>
+
+
+</div>
 
 
 </body>
