--- a/src/main/resources/templates/add-customer-ticket.html
+++ b/src/main/resources/templates/add-customer-ticket.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+        }
+
+        #massage {
+            direction: rtl;
+            background-color: #45a168;
+            color: cornsilk;
+            width: 300px;
+            height: 150px;
+            font-family: Tahoma, serif;
+            font-size: large;
+
+        }
+
+        #main {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-
+<div id="main">
+    <div id="massage" th:text="${massage}"></div>
+    <div><a href="User-Page">Return to Search Page</a></div>
+</div>
 </body>
 </html>
